--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://192.168.205.22:3306/sale
-spring.datasource.username=sale
+spring.datasource.username=root
 spring.datasource.password=sale
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
